--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,7 @@ services:
     volumes:
       - ./proxysql.cnf:/etc/proxysql.cnf:ro
     healthcheck:
-      test: >
-        /bin/bash -c 'mysql -h127.0.0.1 -P6032 -uadmin -padmin --prompt="ProxySQL Admin>" -e "SELECT 1" || exit 1'
+      test: ["CMD", "mysql", "-h", "127.0.0.1", "-P", "6032", "-u", "admin", "-padmin", "-e", "SELECT 1"]
       interval: 10s
       timeout: 5s
       retries: 5
