--- a/proxysql.cnf
+++ b/proxysql.cnf
@@ -2,9 +2,8 @@ datadir="/var/lib/proxysql"
 
 admin_variables=
 {
-    admin_credentials="admin:admin"
-    mysql_ifaces="*:6032"
-    refresh_interval=2000
+    admin_credentials="admin:admin;radmin:radmin"
+    mysql_ifaces="0.0.0.0:6032"
 }
 
 mysql_variables=
@@ -18,7 +17,7 @@ mysql_variables=
     interfaces="0.0.0.0:6033"
     default_schema="information_schema"
     stacksize=1048576
-    server_version="5.7.30"
+    server_version="8.0.32"
     connect_timeout_server=3000
     monitor_username="monitor"
     monitor_password="monitor"
@@ -28,6 +27,9 @@ mysql_variables=
     monitor_read_only_interval=60000
     monitor_read_only_timeout=1500
     ping_interval_server_msec=120000
+    monitor_enabled=1
+    shun_on_failures=3
+    shun_recovery_time_sec=10
     ping_timeout_server=500
     commands_stats=true
     sessions_sort=true
