--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -154,64 +154,105 @@ services:
       master:
         condition: service_healthy
 
-  redmine:
-    image: redmine:5.0.2
-    restart: unless-stopped
-    container_name: redmine
-    hostname: redmine
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    hostname: nginx
     ports:
-      - "3000:3000"
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - redmine1
+      - redmine2
+      - redmine3
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  redmine1:
+    image: redmine:5.0.2
+    container_name: redmine1
+    hostname: redmine1
+    restart: unless-stopped
     environment:
-      REDMINE_DB_WAIT: 80
-      REDMINE_DB_POOL: 20
-      REDMINE_DB_HOST: master
-      REDMINE_DB_PORT: 3306
+      REDMINE_DB_HOST: proxysql
+      REDMINE_DB_PORT: 6033
       REDMINE_DB_USERNAME: redmine
       REDMINE_DB_PASSWORD: redmine_password
       REDMINE_DB_DATABASE: redmine
+      REDMINE_DB_POOL: 25
+      REDMINE_DB_ENCODING: utf8mb4
       TZ: Europe/Istanbul
       RAILS_ENV: production
-      REDMINE_NO_DB_MIGRATE: "false"
       REDMINE_LANG: tr
-      SECRET_KEY_BASE: "some_long_random_string_at_least_32_chars"
-      REDMINE_SESSION_LIFETIME: "86400"
-      REDMINE_SESSION_TIMEOUT: "0"
-      REDMINE_AUTOLOGIN: "true"
     volumes:
-      - redmine_files:/usr/src/redmine/files
-      - redmine_db:/usr/src/redmine/db
-    command: >
-      bash -c "
-        rm -f /usr/src/redmine/tmp/pids/server.pid &&
-        echo 'production:
-          adapter: mysql2
-          database: redmine
-          host: master
-          port: 3306
-          username: redmine
-          password: redmine_password
-          encoding: utf8mb4' > /usr/src/redmine/config/database.yml &&
-        bundle exec rake db:create &&
-        bundle exec rake db:migrate &&
-        echo tr | bundle exec rake redmine:load_default_data &&
-        bundle exec rake generate_secret_token &&
-        echo 'production:
-          session_store: active_record_store
-          session_lifetime: 86400
-          session_timeout: 0
-          autologin: true' > config/configuration.yml &&
-        echo 'production:
-          adapter: mysql2
-          database: redmine
-          host: proxysql
-          port: 6033
-          username: redmine
-          password: redmine_password
-          encoding: utf8mb4' > /usr/src/redmine/config/database.yml &&
-        rails server -b 0.0.0.0"
+      - ./volume/redmine1/redmine-plugins:/usr/src/redmine/plugins
+      - ./volume/redmine1/repos:/home/redmine/repos
+      - ./volume/redmine1/redmine-themes:/usr/src/redmine/public/themes
+      - ./volume/redmine1/redmine-data:/usr/src/redmine/files
+      - ./volume/redmine1/redmine-logs/redmine:/var/log/redmine
     depends_on:
       proxysql:
-        condition: service_started
+        condition: service_healthy
+      setup:
+        condition: service_completed_successfully
+
+  redmine2:
+    image: redmine:5.0.2
+    container_name: redmine2
+    hostname: redmine2
+    restart: unless-stopped
+    environment:
+      REDMINE_DB_HOST: proxysql
+      REDMINE_DB_PORT: 6033
+      REDMINE_DB_USERNAME: redmine
+      REDMINE_DB_PASSWORD: redmine_password
+      REDMINE_DB_DATABASE: redmine
+      REDMINE_DB_POOL: 25
+      REDMINE_DB_ENCODING: utf8mb4
+      TZ: Europe/Istanbul
+      RAILS_ENV: production
+      REDMINE_LANG: tr
+    volumes:
+      - ./volume/redmine2/redmine-plugins:/usr/src/redmine/plugins
+      - ./volume/redmine2/repos:/home/redmine/repos
+      - ./volume/redmine2/redmine-themes:/usr/src/redmine/public/themes
+      - ./volume/redmine2/redmine-data:/usr/src/redmine/files
+      - ./volume/redmine2/redmine-logs/redmine:/var/log/redmine
+    depends_on:
+      proxysql:
+        condition: service_healthy
+      setup:
+        condition: service_completed_successfully
+
+  redmine3:
+    image: redmine:5.0.2
+    container_name: redmine3
+    hostname: redmine3
+    restart: unless-stopped
+    environment:
+      REDMINE_DB_HOST: proxysql
+      REDMINE_DB_PORT: 6033
+      REDMINE_DB_USERNAME: redmine
+      REDMINE_DB_PASSWORD: redmine_password
+      REDMINE_DB_DATABASE: redmine
+      REDMINE_DB_POOL: 25
+      REDMINE_DB_ENCODING: utf8mb4
+      TZ: Europe/Istanbul
+      RAILS_ENV: production
+      REDMINE_LANG: tr
+    volumes:
+      - ./volume/redmine3/redmine-plugins:/usr/src/redmine/plugins
+      - ./volume/redmine3/repos:/home/redmine/repos
+      - ./volume/redmine3/redmine-themes:/usr/src/redmine/public/themes
+      - ./volume/redmine3/redmine-data:/usr/src/redmine/files
+      - ./volume/redmine3/redmine-logs/redmine:/var/log/redmine
+    depends_on:
+      proxysql:
+        condition: service_healthy
       setup:
         condition: service_completed_successfully
 
