--- a/common/config/nginx.conf
+++ b/common/config/nginx.conf
@@ -26,8 +26,8 @@ http {
 
     upstream redmine {
         # Yük dengeleme algoritması
-        least_conn;  # En az bağlantısı olan sunucuya yönlendir
-        
+        #least_conn;  # En az bağlantısı olan sunucuya yönlendir
+        ip_hash;     # Aynı IP'den gelen istekleri aynı sunucuya yönlendir
         server redmine1:3000 max_fails=3 fail_timeout=30s;
         server redmine2:3000 max_fails=3 fail_timeout=30s;
         server redmine3:3000 max_fails=3 fail_timeout=30s;
