--- a/without-db/docker-compose.yml
+++ b/without-db/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "6032:6032"
       - "6033:6033"
     volumes:
-      - ./proxysql.cnf:/etc/proxysql.cnf:ro
+      - ../common/config/proxysql.cnf:/etc/proxysql.cnf:ro
     healthcheck:
       test: ["CMD", "mysql", "-h", "127.0.0.1", "-P", "6032", "-u", "admin", "-padmin", "-e", "SELECT 1"]
       interval: 10s
@@ -26,7 +26,6 @@ services:
     entrypoint: /run.sh
     volumes:
       - ./run.sh:/run.sh
-      - ./redmine-dump.sql:/redmine-dump.sql:ro
     environment:
       MYSQL_ROOT_PASSWORD: root_password
     depends_on:
@@ -51,8 +50,8 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
       - master_data:/var/lib/mysql
-      - ./my.cnf:/etc/mysql/my.cnf:ro
-      - ./1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
+      - ../common/config/my.cnf:/etc/mysql/my.cnf:ro
+      - ../common/config/1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
     environment:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_USER: repl_user
@@ -76,9 +75,9 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ./my.cnf:/etc/mysql/my.cnf:ro
-      - ./1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
-      - ./slave.cnf:/etc/mysql/conf.d/slave.cnf:ro
+      - ../common/config/my.cnf:/etc/mysql/my.cnf:ro
+      - ../common/config/1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
+      - ../common/config/slave.cnf:/etc/mysql/conf.d/slave.cnf:ro
       - slave1_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root_password
@@ -106,9 +105,9 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ./my.cnf:/etc/mysql/my.cnf:ro
-      - ./1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
-      - ./slave.cnf:/etc/mysql/conf.d/slave.cnf:ro
+      - ../common/config/my.cnf:/etc/mysql/my.cnf:ro
+      - ../common/config/1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
+      - ../common/config/slave.cnf:/etc/mysql/conf.d/slave.cnf:ro
       - slave2_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root_password
@@ -136,9 +135,9 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ./my.cnf:/etc/mysql/my.cnf:ro
-      - ./1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
-      - ./slave.cnf:/etc/mysql/conf.d/slave.cnf:ro
+      - ../common/config/my.cnf:/etc/mysql/my.cnf:ro
+      - ../common/config/1_network.cnf:/etc/mysql/conf.d/1_network.cnf:ro
+      - ../common/config/slave.cnf:/etc/mysql/conf.d/slave.cnf:ro
       - slave3_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root_password
@@ -162,7 +161,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../common/config/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - redmine1
       - redmine2
@@ -178,7 +177,6 @@ services:
     container_name: redmine1
     hostname: redmine1
     restart: unless-stopped
-    entrypoint: ["/bin/sh", "-c", "rm -f /usr/src/redmine/config/initializers/migrations.rb && bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
@@ -190,19 +188,12 @@ services:
       TZ: Europe/Istanbul
       RAILS_ENV: production
       REDMINE_LANG: tr
-      SKIP_DATABASE_MIGRATION: "true"
-      RAILS_SKIP_MIGRATIONS: "true"
-      SKIP_RAKE_TASKS: "true"
-      DISABLE_DATABASE_ENVIRONMENT_CHECK: "1"
-      SECRET_KEY_BASE: "some-really-really-long-secret-key-base-123456789"
     volumes:
-      - ./volume/redmine1/redmine-plugins:/usr/src/redmine/plugins
-      - ./volume/redmine1/repos:/home/redmine/repos
-      - ./volume/redmine1/redmine-themes:/usr/src/redmine/public/themes
-      - ./volume/redmine1/redmine-data:/usr/src/redmine/files
-      - ./volume/redmine1/redmine-logs/redmine:/var/log/redmine
-      - ./database.yml:/usr/src/redmine/config/database.yml:ro
-      - ./configuration.yml:/usr/src/redmine/config/configuration.yml:ro
+      - ../volume/redmine1/redmine-plugins:/usr/src/redmine/plugins
+      - ../volume/redmine1/repos:/home/redmine/repos
+      - ../volume/redmine1/redmine-themes:/usr/src/redmine/public/themes
+      - ../volume/redmine1/redmine-data:/usr/src/redmine/files
+      - ../volume/redmine1/redmine-logs/redmine:/var/log/redmine
     depends_on:
       proxysql:
         condition: service_healthy
@@ -214,7 +205,6 @@ services:
     container_name: redmine2
     hostname: redmine2
     restart: unless-stopped
-    entrypoint: ["/bin/sh", "-c", "rm -f /usr/src/redmine/config/initializers/migrations.rb && bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
@@ -226,19 +216,12 @@ services:
       TZ: Europe/Istanbul
       RAILS_ENV: production
       REDMINE_LANG: tr
-      SKIP_DATABASE_MIGRATION: "true"
-      RAILS_SKIP_MIGRATIONS: "true"
-      SKIP_RAKE_TASKS: "true"
-      DISABLE_DATABASE_ENVIRONMENT_CHECK: "1"
-      SECRET_KEY_BASE: "some-really-really-long-secret-key-base-123456789"
     volumes:
-      - ./volume/redmine2/redmine-plugins:/usr/src/redmine/plugins
-      - ./volume/redmine2/repos:/home/redmine/repos
-      - ./volume/redmine2/redmine-themes:/usr/src/redmine/public/themes
-      - ./volume/redmine2/redmine-data:/usr/src/redmine/files
-      - ./volume/redmine2/redmine-logs/redmine:/var/log/redmine
-      - ./database.yml:/usr/src/redmine/config/database.yml:ro
-      - ./configuration.yml:/usr/src/redmine/config/configuration.yml:ro
+      - ../volume/redmine2/redmine-plugins:/usr/src/redmine/plugins
+      - ../volume/redmine2/repos:/home/redmine/repos
+      - ../volume/redmine2/redmine-themes:/usr/src/redmine/public/themes
+      - ../volume/redmine2/redmine-data:/usr/src/redmine/files
+      - ../volume/redmine2/redmine-logs/redmine:/var/log/redmine
     depends_on:
       proxysql:
         condition: service_healthy
@@ -250,7 +233,6 @@ services:
     container_name: redmine3
     hostname: redmine3
     restart: unless-stopped
-    entrypoint: ["/bin/sh", "-c", "rm -f /usr/src/redmine/config/initializers/migrations.rb && bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
@@ -262,19 +244,12 @@ services:
       TZ: Europe/Istanbul
       RAILS_ENV: production
       REDMINE_LANG: tr
-      SKIP_DATABASE_MIGRATION: "true"
-      RAILS_SKIP_MIGRATIONS: "true"
-      SKIP_RAKE_TASKS: "true"
-      DISABLE_DATABASE_ENVIRONMENT_CHECK: "1"
-      SECRET_KEY_BASE: "some-really-really-long-secret-key-base-123456789"
     volumes:
-      - ./volume/redmine3/redmine-plugins:/usr/src/redmine/plugins
-      - ./volume/redmine3/repos:/home/redmine/repos
-      - ./volume/redmine3/redmine-themes:/usr/src/redmine/public/themes
-      - ./volume/redmine3/redmine-data:/usr/src/redmine/files
-      - ./volume/redmine3/redmine-logs/redmine:/var/log/redmine
-      - ./database.yml:/usr/src/redmine/config/database.yml:ro
-      - ./configuration.yml:/usr/src/redmine/config/configuration.yml:ro
+      - ../volume/redmine3/redmine-plugins:/usr/src/redmine/plugins
+      - ../volume/redmine3/repos:/home/redmine/repos
+      - ../volume/redmine3/redmine-themes:/usr/src/redmine/public/themes
+      - ../volume/redmine3/redmine-data:/usr/src/redmine/files
+      - ../volume/redmine3/redmine-logs/redmine:/var/log/redmine
     depends_on:
       proxysql:
         condition: service_healthy
