--- a/with-db/docker-compose.yml
+++ b/with-db/docker-compose.yml
@@ -181,7 +181,11 @@ services:
     container_name: redmine1
     hostname: redmine1
     restart: unless-stopped
-    entrypoint: ["/bin/sh", "-c", "rm -f /usr/src/redmine/config/initializers/migrations.rb && bundle exec rails server -u puma -b 0.0.0.0"]
+    entrypoint: ["/bin/sh", "-c", "
+      gem install redis && \
+      gem install redis-rails && \
+      rm -f /usr/src/redmine/config/initializers/migrations.rb && \
+      bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
@@ -207,18 +211,26 @@ services:
       - ../volume/redmine-logs/redmine:/var/log/redmine
       - ../common/config/database.yml:/usr/src/redmine/config/database.yml:ro
       - ../common/config/configuration.yml:/usr/src/redmine/config/configuration.yml:ro
+      - ../common/config/initializers/redis_session_store.rb:/usr/src/redmine/config/initializers/redis_session_store.rb
+
     depends_on:
       proxysql:
         condition: service_healthy
       setup:
         condition: service_completed_successfully
+      redis:
+        condition: service_healthy
 
   redmine2:
     image: redmine:5.0.2
     container_name: redmine2
     hostname: redmine2
     restart: unless-stopped
-    entrypoint: ["/bin/sh", "-c", "rm -f /usr/src/redmine/config/initializers/migrations.rb && bundle exec rails server -u puma -b 0.0.0.0"]
+    entrypoint: ["/bin/sh", "-c", "
+      gem install redis && \
+      gem install redis-rails && \
+      rm -f /usr/src/redmine/config/initializers/migrations.rb && \
+      bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
@@ -244,18 +256,28 @@ services:
       - ../volume/redmine-logs/redmine:/var/log/redmine
       - ../common/config/database.yml:/usr/src/redmine/config/database.yml:ro
       - ../common/config/configuration.yml:/usr/src/redmine/config/configuration.yml:ro
+      - ../common/config/initializers/redis_session_store.rb:/usr/src/redmine/config/initializers/redis_session_store.rb
+
     depends_on:
       proxysql:
         condition: service_healthy
       setup:
         condition: service_completed_successfully
+      redis:
+        condition: service_healthy
 
   redmine3:
     image: redmine:5.0.2
     container_name: redmine3
     hostname: redmine3
     restart: unless-stopped
-    entrypoint: ["/bin/sh", "-c", "rm -f /usr/src/redmine/config/initializers/migrations.rb && bundle exec rails server -u puma -b 0.0.0.0"]
+    entrypoint: ["/bin/sh", "-c", "
+      gem install redis && \
+      gem install redis-rails && \
+      bundle add redis-rails && \
+      bundle install && \
+      rm -f /usr/src/redmine/config/initializers/migrations.rb && \
+      bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
@@ -281,11 +303,30 @@ services:
       - ../volume/redmine-logs/redmine:/var/log/redmine
       - ../common/config/database.yml:/usr/src/redmine/config/database.yml:ro
       - ../common/config/configuration.yml:/usr/src/redmine/config/configuration.yml:ro
+      - ../common/config/initializers/redis_session_store.rb:/usr/src/redmine/config/initializers/redis_session_store.rb
     depends_on:
       proxysql:
         condition: service_healthy
       setup:
         condition: service_completed_successfully
+      redis:
+        condition: service_healthy
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    command: redis-server --maxmemory 512mb --maxmemory-policy allkeys-lru
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    environment:
+      - TZ=Europe/Istanbul
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
 volumes:
   master_data:
@@ -294,6 +335,7 @@ volumes:
   slave3_data:
   redmine_files:
   redmine_db:
+  redis_data:
 
 networks:
   default:
