--- a/common/config/configuration.yml
+++ b/common/config/configuration.yml
@@ -24,4 +24,4 @@ production:
       domain: localhost
 
   attachments_storage_path: /usr/src/redmine/files
-  log_level: :info
+  log_level: :debug
