prometheus, node-exporter, mysql-exporter,grafana eklendi, proxysqlçcnf icine monitor user eklendi ve access denied hatası cozuldu

--- a/common/config/proxysql.cnf
+++ b/common/config/proxysql.cnf
@@ -89,6 +89,14 @@ mysql_users =
         max_connections=1000
         active = 1
         transaction_persistent=1
+    },
+    {
+        username = "monitor"
+        password = "monitor"
+        default_hostgroup = 10
+        max_connections=1000
+        active = 1
+        transaction_persistent=1
     }
 )
 
