--- a/with-db/docker-compose.yml
+++ b/with-db/docker-compose.yml
@@ -177,16 +177,14 @@ services:
       retries: 3
 
   redmine1:
-    image: redmine:5.0.2
+    build:
+      context: ../common/docker
+      dockerfile: Redmine.Dockerfile
     container_name: redmine1
     hostname: redmine1
     restart: unless-stopped
-    working_dir: /usr/src/redmine
-    entrypoint: ["/bin/sh", "-c", "
-      bundle add redis-rails && \
-      rm -f /usr/src/redmine/config/initializers/migrations.rb && \
-      bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
+      CONTAINER_NAME: redmine1
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
       REDMINE_DB_USERNAME: redmine
@@ -203,12 +201,12 @@ services:
       DISABLE_DATABASE_ENVIRONMENT_CHECK: "1"
       SECRET_KEY_BASE: "some-really-really-long-secret-key-base-123456789"
     volumes:
+      - ../volume/redmine-logs:/var/log/redmine
       - ../volume/redmine-plugins:/usr/src/redmine/plugins
       - ../volume/repos:/home/redmine/repos
       - ../common/config/additional_environment.rb:/usr/src/redmine/config/additional_environment.rb
       - ../volume/redmine-themes:/usr/src/redmine/public/themes
       - ../volume/redmine-data:/usr/src/redmine/files
-      - ../volume/redmine-logs/redmine:/var/log/redmine
       - ../common/config/database.yml:/usr/src/redmine/config/database.yml:ro
       - ../common/config/configuration.yml:/usr/src/redmine/config/configuration.yml:ro
       - ../common/config/initializers/redis_session_store.rb:/usr/src/redmine/config/initializers/redis_session_store.rb
@@ -222,16 +220,14 @@ services:
         condition: service_healthy
 
   redmine2:
-    image: redmine:5.0.2
+    build:
+      context: ../common/docker
+      dockerfile: Redmine.Dockerfile
     container_name: redmine2
     hostname: redmine2
     restart: unless-stopped
-    working_dir: /usr/src/redmine
-    entrypoint: ["/bin/sh", "-c", "
-      bundle add redis-rails && \
-      rm -f /usr/src/redmine/config/initializers/migrations.rb && \
-      bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
+      CONTAINER_NAME: redmine2
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
       REDMINE_DB_USERNAME: redmine
@@ -248,12 +244,12 @@ services:
       DISABLE_DATABASE_ENVIRONMENT_CHECK: "1"
       SECRET_KEY_BASE: "some-really-really-long-secret-key-base-123456789"
     volumes:
+      - ../volume/redmine-logs:/var/log/redmine
       - ../volume/redmine-plugins:/usr/src/redmine/plugins
       - ../common/config/additional_environment.rb:/usr/src/redmine/config/additional_environment.rb
       - ../volume/repos:/home/redmine/repos
       - ../volume/redmine-themes:/usr/src/redmine/public/themes
       - ../volume/redmine-data:/usr/src/redmine/files
-      - ../volume/redmine-logs/redmine:/var/log/redmine
       - ../common/config/database.yml:/usr/src/redmine/config/database.yml:ro
       - ../common/config/configuration.yml:/usr/src/redmine/config/configuration.yml:ro
       - ../common/config/initializers/redis_session_store.rb:/usr/src/redmine/config/initializers/redis_session_store.rb
@@ -267,16 +263,14 @@ services:
         condition: service_healthy
 
   redmine3:
-    image: redmine:5.0.2
+    build:
+      context: ../common/docker
+      dockerfile: Redmine.Dockerfile
     container_name: redmine3
     hostname: redmine3
     restart: unless-stopped
-    working_dir: /usr/src/redmine
-    entrypoint: ["/bin/sh", "-c", "
-      bundle add redis-rails && \
-      rm -f /usr/src/redmine/config/initializers/migrations.rb && \
-      bundle exec rails server -u puma -b 0.0.0.0"]
     environment:
+      CONTAINER_NAME: redmine3
       REDMINE_DB_HOST: proxysql
       REDMINE_DB_PORT: 6033
       REDMINE_DB_USERNAME: redmine
@@ -293,12 +287,12 @@ services:
       DISABLE_DATABASE_ENVIRONMENT_CHECK: "1"
       SECRET_KEY_BASE: "some-really-really-long-secret-key-base-123456789"
     volumes:
+      - ../volume/redmine-logs:/var/log/redmine
       - ../volume/redmine-plugins:/usr/src/redmine/plugins
       - ../volume/repos:/home/redmine/repos
       - ../common/config/additional_environment.rb:/usr/src/redmine/config/additional_environment.rb
       - ../volume/redmine-themes:/usr/src/redmine/public/themes
       - ../volume/redmine-data:/usr/src/redmine/files
-      - ../volume/redmine-logs/redmine:/var/log/redmine
       - ../common/config/database.yml:/usr/src/redmine/config/database.yml:ro
       - ../common/config/configuration.yml:/usr/src/redmine/config/configuration.yml:ro
       - ../common/config/initializers/redis_session_store.rb:/usr/src/redmine/config/initializers/redis_session_store.rb
@@ -326,6 +320,56 @@ services:
       timeout: 3s
       retries: 5
 
+  loki:
+    image: grafana/loki:2.9.0
+    container_name: loki
+    command: -config.file=/etc/loki/loki.yaml
+    ports:
+      - "3100:3100"
+    volumes:
+      - ../common/config/loki.yaml:/etc/loki/loki.yaml
+      - loki_data:/loki
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --tries=1 -O- http://localhost:3100/ready || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+    networks:
+      - default
+
+  promtail:
+    image: grafana/promtail:2.9.0
+    container_name: promtail
+    volumes:
+      - ../common/config/promtail.yaml:/etc/promtail/config.yaml
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - ../volume/redmine-logs:/var/log/redmine:ro
+      - /var/log/nginx:/var/log/nginx:ro
+    command: -config.file=/etc/promtail/config.yaml
+    depends_on:
+      - loki
+    networks:
+      - default
+
+  grafana:
+    image: grafana/grafana:10.0.0
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_LOG_MODE=console file
+      - GF_LOG_LEVEL=info
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ../common/config/grafana/provisioning:/etc/grafana/provisioning
+    depends_on:
+      - loki
+    networks:
+      - default
+
 volumes:
   master_data:
   slave1_data:
@@ -334,6 +378,8 @@ volumes:
   redmine_files:
   redmine_db:
   redis_data:
+  loki_data:
+  grafana_data:
 
 networks:
   default:
