--- a/common/config/prometheus.yml
+++ b/common/config/prometheus.yml
@@ -23,3 +23,8 @@ scrape_configs:
   - job_name: 'mysql-exporter'
     static_configs:
       - targets: ['mysql-exporter:9104']
+
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8585']
