--- a/common/config/proxysql.cnf
+++ b/common/config/proxysql.cnf
@@ -8,8 +8,8 @@ admin_variables=
 
 mysql_variables=
 {
-    threads=4
-    max_connections=2048
+    threads=8
+    max_connections=4096
     default_query_delay=0
     default_query_timeout=36000000
     have_compress=true
@@ -18,22 +18,27 @@ mysql_variables=
     default_schema="information_schema"
     stacksize=1048576
     server_version="8.0.32"
-    connect_timeout_server=3000
+    connect_timeout_server=10000
     monitor_username="monitor"
     monitor_password="monitor"
     monitor_history=600000
-    monitor_connect_interval=120000
-    monitor_ping_interval=60000
+    monitor_connect_interval=30000
+    monitor_ping_interval=15000
     monitor_read_only_interval=60000
     monitor_read_only_timeout=1500
-    ping_interval_server_msec=120000
+    ping_interval_server_msec=60000
     monitor_enabled=1
     shun_on_failures=3
     shun_recovery_time_sec=10
-    ping_timeout_server=500
+    ping_timeout_server=2000
     commands_stats=true
     sessions_sort=true
-    connect_retries_on_failure=10
+    connect_retries_on_failure=30
+    free_connections_pct=10
+    max_transaction_time=36000000
+    max_connections_per_user_per_hostgroup=1000
+    query_processor_iterations=10000
+    query_cache_size_MB=256
 }
 
 mysql_servers =
@@ -43,18 +48,19 @@ mysql_servers =
         port=3306
         hostgroup=10
         status="ONLINE"
-        weight=1
+        weight=2
         compression=0
-        max_connections=200
+        max_connections=2000
+        max_latency_ms=1500
     },
     {
         address="slave1"
         port=3306
         hostgroup=20
         status="ONLINE"
-        weight=1
+        weight=3
         compression=0
-        max_connections=200
+        max_connections=1000
         max_replication_lag=3600
     },
     {
@@ -62,9 +68,9 @@ mysql_servers =
         port=3306
         hostgroup=20
         status="ONLINE"
-        weight=1
+        weight=3
         compression=0
-        max_connections=200
+        max_connections=1000
         max_replication_lag=3600
     },
     {
@@ -72,9 +78,9 @@ mysql_servers =
         port=3306
         hostgroup=20
         status="ONLINE"
-        weight=1
+        weight=3
         compression=0
-        max_connections=200
+        max_connections=1000
         max_replication_lag=3600
     }
 )
@@ -86,7 +92,7 @@ mysql_users =
         username = "redmine"
         password = "redmine_password"
         default_hostgroup = 10
-        max_connections=1000
+        max_connections=2000
         active = 1
         transaction_persistent=1
     },
@@ -108,6 +114,7 @@ mysql_query_rules =
         match_digest="^SELECT.*"
         destination_hostgroup=20
         apply=1
+        cache_ttl=30000
     },
     {
         rule_id=2
