--- a/with-db/docker-compose.yml
+++ b/with-db/docker-compose.yml
@@ -325,17 +325,18 @@ services:
     container_name: monitoring_prometheus
     hostname: monitoring_prometheus
     restart: unless-stopped
+    user: "65534:65534"  # nobody:nobody kullanıcısı
     volumes:
-       - ../volume/prometheus_data:/prometheus
-       - ../common/config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ../volume/prometheus_data:/prometheus
+      - ../common/config/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
-       - '--config.file=/etc/prometheus/prometheus.yml'
-       - '--storage.tsdb.path=/prometheus'
-       - '--storage.tsdb.retention.time=365d'
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=365d'
     expose:
-       - 9090
+      - 9090
     ports:
-       - 9090:9090
+      - 9090:9090
 
   node-exporter:
       image: prom/node-exporter:latest
@@ -430,6 +431,39 @@ services:
       - loki
     networks:
       - default
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    container_name: monitoring_cadvisor
+    hostname: monitoring_cadvisor
+    privileged: true
+    devices:
+      - /dev/kmsg:/dev/kmsg
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+      - /etc/machine-id:/etc/machine-id:ro
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    restart: unless-stopped
+    expose:
+      - 8585
+    ports:
+      - "8585:8585"
+    networks:
+      - default
+    depends_on:
+      - prometheus
+    command:
+      - --port=8585
+      - --disable_metrics=percpu,sched,tcp,udp,disk,diskIO,hugetlb,referenced_memory
+      - --docker_only=true
+      - --housekeeping_interval=30s
+    environment:
+      - TZ=Europe/Istanbul
 
 volumes:
   master_data:
