--- a/common/config/prometheus.yml
+++ b/common/config/prometheus.yml
@@ -1,30 +1,20 @@
 global:
-  scrape_interval: 50s
-  evaluation_interval: 120s
-  external_labels:
-    monitor: 'monitoring'
-
-rule_files:
-  # - "alert.rules"
-  # - "first.rules"
-  # - "second.rules"
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
   - job_name: 'prometheus'
-    scrape_interval: 10s
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'node-exporter'
-    scrape_interval: 5s
+  - job_name: 'cadvisor'
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ['monitoring_cadvisor:8080']
+
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['monitoring_node_exporter:9100']
 
   - job_name: 'mysql-exporter'
     static_configs:
-      - targets: ['mysql-exporter:9104']
-
-  - job_name: 'cadvisor'
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['cadvisor:8585']
+      - targets: ['mysql_exporter:9104']
